--- a/semestralka/styles/styles.css
+++ b/semestralka/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #4b4a4a;
     color: #333;
 }
 
@@ -8,7 +8,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 20px 50px;
-    background-color: #f8f9fa;
+    background-color: #4b4a4a;
     align-items: center;
 }
 
