--- a/www/janl22/4iz278-sp/src/app/Presenters/templates/Users/@layout-detail.latte
+++ b/www/janl22/4iz278-sp/src/app/Presenters/templates/Users/@layout-detail.latte
@@ -74,7 +74,7 @@
 
         </div>
 
-        {block content_detail}{/block}
+        {block content_detail}
 
     </div>
 
@@ -82,5 +82,5 @@
 
 {block scripts}
     <script src="{$basePath}/js/intra/users/userDetail.js"></script>
-    {block scripts_detail}{/block}
+{block scripts_detail}
 {/block}
