--- a/www/dokt00/sp/pages/admin/styles.css
+++ b/www/dokt00/sp/pages/admin/styles.css
@@ -45,6 +45,8 @@ nav ul li a {
     border: 1px solid #fff;
     background-color: #333;
     color: #fff;
+    width: 300px;
+    font-size: 1.2em; 
 }
 
 .login {
@@ -423,5 +425,22 @@ input[type=submit] {
     background-color: #c9302c;
 }
 
+.main-image {
+    width: 100%;
+}
+
+.user-box {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.user-box h3 {
+    margin-bottom: 10px;
+    color: #333;
+}
 
 
