--- a/www/dokt00/sp/pages/logged_in/styles.css
+++ b/www/dokt00/sp/pages/logged_in/styles.css
@@ -45,6 +45,8 @@ nav ul li a {
     border: 1px solid #fff;
     background-color: #333;
     color: #fff;
+    width: 300px;
+    font-size: 1.2em;
 }
 
 .login {
@@ -224,20 +226,20 @@ footer nav ul li a:hover {
 }
 
 input[type=submit] {
-    padding:5px 15px; 
-    background:#ccc; 
+    padding: 5px 15px;
+    background: #ccc;
     color: white;
-    border:0 none;
-    cursor:pointer;
+    border: 0 none;
+    cursor: pointer;
     -webkit-border-radius: 5px;
-    border-radius: 5px; 
+    border-radius: 5px;
     background-color: #444;
 }
 
 .button:hover {
-    background-color: #4CAF50; 
+    background-color: #4CAF50;
     color: white;
-  }
+}
 
 #register-form {
     display: flex;
@@ -326,9 +328,9 @@ input[type=submit] {
 }
 
 .empty-cart-message {
-    font-size: 2em;  
-    text-align: center;   
-    margin: 50px 0; 
+    font-size: 2em;
+    text-align: center;
+    margin: 50px 0;
 }
 
 .product-container {
@@ -338,7 +340,7 @@ input[type=submit] {
 }
 
 .product-name {
-    margin-left: 10px; 
+    margin-left: 10px;
 }
 
 .product-box td {
@@ -378,3 +380,67 @@ input[type=submit] {
     text-align: right;
 }
 
+.main-image {
+    width: 100%;
+}
+
+button.added {
+    background-color: green;
+    color: white;
+}
+
+.profile {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 500px;
+}
+
+.profile-info {
+    
+}
+
+.profile-action {
+    color: #0060B6;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.profile-action:hover {
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
+
+.profile-info-wrapper {
+    display: flex;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    width: 450px;
+}
+
+.profile-photo {
+    width: 150px;
+    height: 150px;
+    margin-right: 20px;
+    margin-top: 20px;
+} 
+
+.profile-photo img {
+    width: 130px;
+    height: 130px;
+} 
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    height: 25px;
+    width: 300px;
+}
