--- a/www/bubm02/sp/public/frontend/css/custom.css
+++ b/www/bubm02/sp/public/frontend/css/custom.css
@@ -53,3 +53,15 @@
 
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
+
+.product-image {
+    max-width:100%;
+    max-height:100%;
+    width: auto;
+    height: auto;
+}
+
+.product-image-wrap {
+    width: 300px;
+    height: 500px;
+}
