--- a/www/vejm04/sp/styles/checkout.css
+++ b/www/vejm04/sp/styles/checkout.css
@@ -64,3 +64,25 @@ tfoot td {
 p {
     margin-left: 10px;
 }
+
+.send-order {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.send-order button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.send-order button:hover {
+    background-color: #45a049;
+}
