--- a/www/vejm04/sp/styles/registration.css
+++ b/www/vejm04/sp/styles/registration.css
@@ -70,3 +70,10 @@ a {
     color: #000000;
     text-decoration: none;
 }
+
+.privacyPolicyAndFB {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
