quantity change, shipping, payment, pagination

--- a/www/vejm04/sp/styles/common.css
+++ b/www/vejm04/sp/styles/common.css
@@ -104,3 +104,11 @@ h2 {
 .btn:hover {
     background-color: #45a049;
 }
+
+.btnPage {
+    width: 50px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
