--- a/www/vejm04/sp/styles/login.css
+++ b/www/vejm04/sp/styles/login.css
@@ -71,3 +71,10 @@ a {
     color: #000000;
     text-decoration: none;
 }
+
+.googleLogin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
